	qswlnd    - Qsnet kernel modules 5.20 and later,
	openiblnd - IbGold 1.8.2,
	o2iblnd   - OFED 1.1 and 1.2.0, 1.2.5.
	viblnd    - Voltaire ibhost 3.4.5 and later,
	ciblnd    - Topspin 3.2.0,
	iiblnd    - Infiniserv 3.3 + PathBits patch,
	gmlnd     - GM 2.1.22 and later,
	mxlnd     - MX 1.2.1 or later,
	ptllnd    - Portals 3.3 / UNICOS/lc 1.5.x, 2.0.x

Severity   : normal
Bugzilla   : 12302
Description: new userspace socklnd
Details    : Old userspace tcpnal that resided in lnet/ulnds/socklnd replaced
             with new one - usocklnd.

Severity   : enhancement
Bugzilla   : 11686
Description: Console message flood
Details    : Make cdls ratelimiting more tunable by adding several tunable in
	     procfs /proc/sys/lnet/console_{min,max}_delay_centisecs and
	     /proc/sys/lnet/console_backoff.

--------------------------------------------------------------------------------

2007-09-27         Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.6.3
       * Support for networks:
	socklnd   - any kernel supported by Lustre,
	qswlnd    - Qsnet kernel modules 5.20 and later,
	openiblnd - IbGold 1.8.2,
	o2iblnd   - OFED 1.1 and 1.2,
	viblnd    - Voltaire ibhost 3.4.5 and later,
	ciblnd    - Topspin 3.2.0,
	iiblnd    - Infiniserv 3.3 + PathBits patch,
	gmlnd     - GM 2.1.22 and later,
	mxlnd     - MX 1.2.1 or later,
	ptllnd    - Portals 3.3 / UNICOS/lc 1.5.x, 2.0.x

Severity   : normal
Bugzilla   : 12782
Description: /proc/sys/lnet has non-sysctl entries
Details    : Updating dump_kernel/daemon_file/debug_mb to use sysctl variables

Severity   : major
Bugzilla   : 13236
Description: TOE Kernel panic by ksocklnd
Details    : offloaded sockets provide their own implementation of sendpage,
             can't call tcp_sendpage() directly

Severity   : normal
Bugzilla   : 10778
Description: kibnal_shutdown() doesn't finish; lconf --cleanup hangs
Details    : races between lnd_shutdown and peer creation prevent 
             lnd_shutdown from finishing.
